# CUTIEE

./: .dockerignore  .env.cutiee.template  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT-DEV-BRANCH.md  CUITEEE_Framework_v3.md  DEPLOY-RENDER.md  Dockerfile.worker  README.md  README_AI.md  REVIEW.md  SPEC.md  docker-compose.yml  manage.py  pyproject.toml  render.yaml
CUTIEEDesignSystem/: README.md  SKILL.md  colors_and_type.css
CUTIEEDesignSystem/preview/: backgrounds.html  brand-icons.html  brand-logo.html  cards-feature.html  colors-aurora.html  colors-neutrals.html  colors-primary.html  colors-semantic.html  components-banners.html  components-buttons.html  components-cards.html  components-inputs.html  components-metrics.html  components-pills.html  components-table.html  inputs.html  logo.html  radii.html  shadows.html  spacing.html  type-body.html  type-display.html  type-mono.html
CUTIEEDesignSystem/ui_kits/web-app/: index.html  (+2 more)
MemoriaDesignSystem/: README.md
MemoriaDesignSystem/preview/: buttons.html  colors-neutrals.html  colors-primary.html  icons.html  integrations.html  shadows.html  spacing-radii.html  type-body.html
agent/: README.md  __init__.py
agent/browser/: controller.py  dom_extractor.py
agent/eval/: __init__.py  webvoyager_lite.py
agent/harness/: completion.py  computer_use_loop.py  config.py  cost_ledger.py  cost_telemetry.py  env_utils.py  heartbeat.py  orchestrator.py  preview.py  state.py  url_safety.py  url_utils.py
agent/memory/: ace_memory.py  action_graph.py  bullet.py  bullet_reconstruct.py  curator.py  decay.py  decomposer.py  embeddings.py  fragment_replay.py  local_llm.py  local_llm_stub.py  pipeline.py  planner.py  quality_gate.py  reflector.py  replay.py  semantic.py  state_verifier.py  store.py  subgraph_match.py  text_utils.py
agent/persistence/: __init__.py  bootstrap.py  healthcheck.py  metrics.py  neo4j_client.py  sessions.py  users.py
agent/pruning/: __init__.py  context_window.py  fg_bg_decomposer.py  summarizer.py
agent/routing/: __init__.py  confidence_probe.py  cu_client.py  difficulty_classifier.py  factory.py  router.py
agent/safety/: approval_gate.py  audit.py  captcha_detector.py  injection_guard.py  risk_classifier.py
apps/accounts/: admin.py  apps.py  context_processors.py  forms.py  models.py  neo4j_auth.py  neo4j_auth_backend.py  neo4j_urls.py  oauth_views.py  repo.py  signals.py  urls.py  views.py
apps/audit/: redactor.py  repo.py  screenshot_store.py  urls.py  views.py
apps/common/: query_utils.py
apps/landing/: apps.py  urls.py  views.py
apps/memory_app/: action_graph_store.py  apps.py  bullet.py  forms.py  repo.py  store.py  urls.py  views.py
apps/tasks/: api.py  approval_queue.py  apps.py  forms.py  partials.py  preview_queue.py  progress_backend.py  repo.py  runner_factory.py  services.py  urls.py  views.py
cutiee_site/: _internal_db.py  asgi.py  context_processors.py  logging_filters.py  neo4j_session_backend.py  settings.py  urls.py  wsgi.py
data/benchmarks/: cost_waterfall.csv
data/eval/: 20260429-backend-comparison.csv  20260429-summary.md
demo_sites/form_site/: app.py
demo_sites/slides_site/: app.py
demo_sites/spreadsheet_site/: app.py
docs/: EVALUATION.md  FAILURES.md  IMPROVEMENT.md  PART1.md  REPORT.md  TECHNICAL-REPORT.md  env.example.proposed  part1_product_refinement.md  technical_report.md
docs/evaluation/: cost_comparison.md  failure_analysis.md  improvement.md  production_readiness.md  test_cases.md
docs/paper/: cutiee_icml2026.tex  progress_report.md
docs/screenshots/: README.md
examples/: standalone_cu_run.py
plans/: linear-cuddling-nygaard.md  ultraplan-cannot-launch-remote-zazzy-steele.md  ultrathink-think-carefully-and-valiant-squid.md
scripts/: benchmark_costs.py  build_report_pdf.py  cache_local_qwen.py  capture_screenshots.py  capture_storage_state.py  dev.sh  download_qwen.py  make_placeholder_screenshots.py  neo4j_up.sh  start_demo_sites.py  start_llama_server.sh  sweep_bullets.py  verify_render_isolation.sh
static/css/: cutiee.css
templates/: base.html
templates/account/: login.html  neo4j_login.html  signup.html
tests/: conftest.py  test_settings_database.py
tests/agent/: test_action_graph.py  test_approval_queue_threading.py  test_browser_env.py  test_browser_use_client.py  test_computer_use_runner.py  test_config_cu_backend.py  test_cu_client_protocol.py  test_cu_model_defaults.py  test_decomposer.py  test_hybrid_replay.py  test_local_llm.py  test_memory.py  test_navigation_url_safety.py  test_orchestrator.py  test_planner.py  test_progress_backend.py  test_pruner.py  test_reflector_fallback_chain.py  test_reusable_steps.py  test_router.py  test_safety.py  test_security.py  test_state.py  test_state_verifier.py  test_tier_semantics.py  test_url_utils.py
tests/apps/: test_accounts_models.py  test_accounts_preferences_view.py  test_landing_about_cbv.py  test_memory_views.py  test_neo4j_auth.py  test_query_utils.py  test_runner_factory.py  test_tasks_csv_export.py  test_tasks_forms_ssrf.py  test_tasks_repo.py  test_tasks_views.py  test_user_preference_wiring.py
(+23 files in other folders)
