[project]
name = "cutiee"
version = "0.1.0"
description = "Computer Use agentIc-framework with Token-efficient harnEss Engineering"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "django-allauth[socialaccount]>=65.0",
    "playwright>=1.45",
    "google-genai>=0.3",
    "neo4j>=5.26",
    "fastembed>=0.3",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
    "cryptography>=43.0",
    "redis>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-django>=4.9",
    "pytest-playwright>=0.5",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
DJANGO_SETTINGS_MODULE = "cutiee_site.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
markers = [
    "slow: tests that take >5s",
    "local: tests requiring CUTIEE_ENV=local and a reachable Neo4j bolt endpoint (uses MockComputerUseClient)",
    "production: tests requiring CUTIEE_ENV=production, GEMINI_API_KEY, and a real Chromium binary",
    "integration: E2E tests against demo Flask sites",
    "showcase: real-world demos requiring a logged-in Playwright storage_state",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "apps", "cutiee_site"]
