[project]
name = "cutiee"
version = "0.1.0"
description = "Computer Use agentIc-framework with Token-efficient harnEss Engineering"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.15",
    "django-environ>=0.11",
    "django-allauth[socialaccount]>=65.0",
    "playwright>=1.45",
    "google-genai>=0.3",
    "neo4j>=5.26",
    "fastembed>=0.3",
    "numpy>=1.26",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "flask>=3.0",
    "gunicorn>=22.0",
    "whitenoise>=6.7",
    "cryptography>=43.0",
    "redis>=5.0",
    "psycopg[binary]>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-django>=4.9",
    "pytest-playwright>=0.5",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "respx>=0.21",
]
# Optional CU backend. Install with `uv sync --group browser_use` or
# `pip install "cutiee[browser_use]"` when CUTIEE_CU_BACKEND=browser_use.
# The Dockerfile.worker image installs it unconditionally so the worker
# can switch backends at runtime without a rebuild.
browser_use = [
    "browser-use>=0.7,<1.0",
]
local_llm = [
    "huggingface-hub>=0.30,<1.0",
    "torch>=2.5,<3.0",
    "transformers>=4.51,<5.0",
]
# Optional production observability. Install with
# `uv sync --group observability`. Sentry activates automatically when
# SENTRY_DSN is set; Prometheus when CUTIEE_ENABLE_PROMETHEUS=1.
observability = [
    "sentry-sdk>=2.10,<3.0",
    "prometheus-client>=0.20,<1.0",
]

[project.optional-dependencies]
browser_use = [
    "browser-use>=0.7,<1.0",
]
local_llm = [
    "huggingface-hub>=0.30,<1.0",
    "torch>=2.5,<3.0",
    "transformers>=4.51,<5.0",
]
observability = [
    "sentry-sdk>=2.10,<3.0",
    "prometheus-client>=0.20,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
DJANGO_SETTINGS_MODULE = "cutiee_site.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
markers = [
    "slow: tests that take >5s",
    "local: tests requiring CUTIEE_ENV=local and a reachable Neo4j bolt endpoint (uses MockComputerUseClient)",
    "production: tests requiring CUTIEE_ENV=production, GEMINI_API_KEY, and the optional playwright extra installed",
    "integration: E2E tests against demo Flask sites",
    "showcase: real-world demos requiring the playwright extra plus a logged-in storage_state",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
# Enforce strict typing only on the repo/CLI surfaces that are currently
# annotated end-to-end. This is an explicit partial-coverage policy, not
# repo-wide strictness. Third-party packages without type stubs are listed
# below as per-module overrides so any new untyped dependency surfaces as a
# type error rather than silently slipping past a global
# `ignore_missing_imports`. Those typed surfaces are still gated in
# pre-commit via `.pre-commit-config.yaml`.
files = [
    "agent/eval/webvoyager_lite.py",
    "agent/pruning/__init__.py",
    "apps/audit/repo.py",
    "apps/memory_app/repo.py",
    "apps/tasks/repo.py",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "django.*",
    "neo4j",
    "neo4j.*",
]
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "apps", "cutiee_site"]
